<resources>
    <string name="app_name">RxJavaDemo</string>
    <string name="rx_java_title">RxJava 研究</string>
    <string name="test">test</string>
    <string name="show">show</string>
    <string name="hide">hide</string>
    <string name="state">state</string>
    <string name="normal">normal</string>
    <string name="failure">failure</string>
    <string name="error">error</string>
    <string name="mvp">MVP</string>
    <string name="rxjava">RXJava</string>
    <string name="simple">simple</string>
</resources>
